--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,7 +53,7 @@ jobs:
         python manage.py test
 
 
-build_and_push_to_docker_hub:
+#build_and_push_to_docker_hub:
     name: Push Docker image to DockerHub
     runs-on: ubuntu-latest
     needs: tests
@@ -89,7 +89,7 @@ build_and_push_to_docker_hub:
           # на сервере и в docker-compose.yml не указывать версию
           tags: amir800s/taski_backend:latest
 
-  frontend_tests:
+ # frontend_tests:
     runs-on: ubuntu-latest
 
     steps:
@@ -112,7 +112,7 @@ build_and_push_to_docker_hub:
       run: |
         cd frontend/
         npm run test
-  build_frontend_and_push_to_docker_hub:
+  #build_frontend_and_push_to_docker_hub:
     name: Push frontend Docker image to DockerHub
     runs-on: ubuntu-latest
     needs: frontend_tests
@@ -133,7 +133,7 @@ build_and_push_to_docker_hub:
           push: true
           tags: amir800s/taski_frontend:latest
 
-  build_gateway_and_push_to_docker_hub:
+ # build_gateway_and_push_to_docker_hub:
     name: Push gateway Docker image to DockerHub
     runs-on: ubuntu-latest
     steps:
