--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -90,7 +90,7 @@ jobs:
           tags: amir800s/taski_backend:latest
 
  # frontend_tests:
-    runs-on: ubuntu-latest
+#    runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v3
@@ -114,7 +114,7 @@ jobs:
         npm run test
   #build_frontend_and_push_to_docker_hub:
     name: Push frontend Docker image to DockerHub
-    runs-on: ubuntu-latest
+ #   runs-on: ubuntu-latest
     needs: frontend_tests
     steps:
       - name: Check out the repo
@@ -135,7 +135,7 @@ jobs:
 
  # build_gateway_and_push_to_docker_hub:
     name: Push gateway Docker image to DockerHub
-    runs-on: ubuntu-latest
+  #  runs-on: ubuntu-latest
     steps:
       - name: Check out the repo
         uses: actions/checkout@v3
