--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,9 +53,9 @@ jobs:
         python manage.py test
 
 
-#build_and_push_to_docker_hub:
+build_and_push_to_docker_hub:
     name: Push Docker image to DockerHub
-#    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest
     needs: tests
     steps:
       - name: Check out the repo
@@ -89,8 +89,8 @@ jobs:
           # на сервере и в docker-compose.yml не указывать версию
           tags: amir800s/taski_backend:latest
 
- # frontend_tests:
-#    runs-on: ubuntu-latest
+ frontend_tests:
+    runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v3
@@ -112,9 +112,9 @@ jobs:
       run: |
         cd frontend/
         npm run test
-  #build_frontend_and_push_to_docker_hub:
+ build_frontend_and_push_to_docker_hub:
     name: Push frontend Docker image to DockerHub
- #   runs-on: ubuntu-latest
+    runs-on: ubuntu-latest
     needs: frontend_tests
     steps:
       - name: Check out the repo
@@ -133,9 +133,9 @@ jobs:
           push: true
           tags: amir800s/taski_frontend:latest
 
- # build_gateway_and_push_to_docker_hub:
+  build_gateway_and_push_to_docker_hub:
     name: Push gateway Docker image to DockerHub
-  #  runs-on: ubuntu-latest
+    runs-on: ubuntu-latest
     steps:
       - name: Check out the repo
         uses: actions/checkout@v3
